--- a/src/main/resources/templates/members/memberPage.html
+++ b/src/main/resources/templates/members/memberPage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head> <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="/js/top.js"></script>
+
 </head>
 <link rel=stylesheet type="text/css" href="/css/board.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -20,6 +20,35 @@
 
 
 <div class="top">
+    <nav class="navbar navbar-expand-lg bg-light" style="background-color: #20c997">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">K.Knock</a>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/">Home</a>
+                    </li>
+                    <li class="nav-item" style="color: #1a1e21!important;">
+                        <a class="nav-link" href="/members">회원목록</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/members/new">회원가입</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/questions/questionList">질문목록</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/questions/new">질문 작성</a>
+                    </li>
+                </ul>
+                <form action="/search" name="search" class="d-flex" role="search" method="post">
+                    <input class="form-control me-2" type="text" placeholder="Search" name="search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+            </div>
+        </div>
+    </nav>
 </div>
 <div class="gap"></div>
 <div class="grid-container">
@@ -42,22 +71,52 @@
 
 <div class="container">
     <div class="profile">
+        <form class="upload-form" action="/image" method="POST" enctype="multipart/form-data">
+            <input  type="file" name="file"  onchange="imageChoose(this)"/>
+            <div class="upload-img">
+                <img src="/images/person.jpeg" alt="" id="imageUploadPreview" />
+            </div>
+            <script>
+                function imageChoose(input) {
+                    if (input.files && input.files[0]) {
+                        let reader = new FileReader();
+                        reader.onload = function (e) {
+                            $('#imageUploadPreview').attr('src', e.target.result);
+                        }
+                        reader.readAsDataURL(input.files[0]);
+                    }
+                }
+                </script>
+            <!--사진설명 + 업로드버튼-->
+            <div class="upload-form-detail">
+                <input type="text" placeholder="사진설명" name="caption">
+                <button class="cta blue">업로드</button>
+            </div>
+            <!--사진설명end-->
+
+        </form>
+
     <div class="profile-img">
-        <img src="" onerror="this.src='/image/jordan1-1.PNG'"/>
+        <img th:src="'/image/'+${member.getImage().get(0).getPostImageUrl()}"/>
+        <p th:text="${member.getImage().get(0).getPostImageUrl()}"></p>
+
     </div>
+        <br>
+        <br>
     <h1 th:text="${member.name}"></h1>
     </div>
     <div class="stat">
       <h2 >Stat</h2>
         <div class="stat-box">
-            <p>좋아요 30  </p> <p>답변수 20 </p> <p>질문수  10</p> <p>rank</p>
+            <p>좋아요 30  </p> <p th:text="'답변수 '+${member.getComments().size()}"></p> <p th:text="'질문수 '+${member.getAsk().size()}"></p> <p>rank</p>
         </div>
         <hr>
         <br><br>
         <h3>profile link</h3>
         <div class="github">
-            <a th:text="${member.github}" th:href="${member.github}">github</a>
-            <a th:text="${member.blog}" th:href="${member.blog}">blog</a>
+            <a th:text="'깃허브 주소: '+${member.github}" th:href="${member.github}" target="_blank">github</a>
+            <br>
+            <a th:text="'블로그 주소: '+${member.blog}" th:href="${member.blog}" target="_blank">blog</a>
         </div>
 <br><br><hr>
         <div class="badges">
