--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,8 +3,11 @@
 <link rel="stylesheet" href="/css/board.css">
 <link rel="stylesheet"type="text/js" href="/js/board.js">
 <link rel="stylesheet" href="/css/bootstrap.css">
+<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<link rel="stylesheet" href="/css/home.css">
 <head> <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="/js/top.js"></script>
+    <!--<script src="/js/top.js"></script>-->
 </head>
 <style>
     .nav-item .nav-link {
@@ -13,10 +16,50 @@
     .container-fluid .navbar-brand{
         color: gray;
     }
+
+    .card {
+        display: flex;
+
+        justify-content: space-between;
+    }
+
+    .image img {
+        max-width: 100%;
+        max-height: 100%;
+    }
 </style>
 <body>
 <div class="top" style="background-color: #20c997">
+    <nav class="navbar navbar-expand-lg bg-light" style="background-color: #20c997">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">K.Knock</a>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/members/new">회원가입</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/members">회원목록</a>
+                    </li>
 
+                    <li class="nav-item">
+                        <a class="nav-link" href="/questions/questionList">질문목록</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="/questions/new">질문 작성</a>
+                    </li>
+                </ul>
+                <form action="/search" name="search" class="d-flex" role="search" method="post">
+                    <input class="form-control me-2" type="text" placeholder="Search" name="search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+            </div>
+        </div>
+    </nav>
 </div>
 <div class="gap"></div>
 
@@ -41,7 +84,7 @@
     <div class="center">
         <div id="container_1">
             <div class="card" style="background-color: rgba(63, 151, 155, 0.62);">
-                <img  src="https://dreamhack.io/assets/img/rank_1.a680c13.svg"  style="width: 40px;height: 85px;" alt="1등">
+                <img src="https://dreamhack.io/assets/img/rank_1.a680c13.svg"  style="width: 40px;height: 85px;" alt="1등">
                 <div class="words">
                     <h3 style="color:#fff">실시간 채택왕</h3>
                     <p style="font-size: large;
@@ -52,7 +95,8 @@
        "th:text="${answerKings.getScore()}+'점'"></p>
                 </div>
                 <div class="image">
-<img src="https://avatars.githubusercontent.com/u/102720771?v=4" style="width:80%; height:80%;">
+                    <img th:src="'/image/'+${answerKings.getImage().get(0).getPostImageUrl()}" th:if="${answerKings.getImage().get(0).getPostImageUrl()!=null}" >
+                    <img src="https://avatars.githubusercontent.com/u/102720771?v=4" th:if="${answerKings.getImage().isEmpty()}">
                 </div>
             </div>
             <div class="card" style="background-color: rgba(63, 151, 100, 0.62);">
@@ -67,11 +111,12 @@
        "th:text="${askKings.getAsk.size()}+'개'"></p>
                 </div>
                 <div class="image">
-                    <img src="https://avatars.githubusercontent.com/u/102720771?v=4" style="width:80%; height:80%;">
+                 <!--   <img th:src="'/image/'+${askKings.getImage().get(0).getPostImageUrl()}" th:if="${askKings.getImage().get(0).getPostImageUrl()!=null}" >-->
+                    <img src="https://avatars.githubusercontent.com/u/102720771?v=4">
                 </div>
             </div>
             <div class="card" style="background-color: rgba(50, 151, 100, 0.62);">
-                <img  src="https://dreamhack.io/assets/img/rank_1.a680c13.svg"  style="width: 40px;height: 85px;" alt="1등">
+                <img src="https://dreamhack.io/assets/img/rank_1.a680c13.svg"  style="width: 40px;height: 85px;" alt="1등">
                 <div class="words">
                     <h3 style="color:#fff">실시간 보안왕</h3>
 
