--- a/src/main/resources/templates/loginHome.html
+++ b/src/main/resources/templates/loginHome.html
@@ -1,28 +1,138 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+<link rel="stylesheet" href="/css/board.css">
+<link rel="stylesheet"type="text/js" href="/js/board.js">
+<link rel="stylesheet" href="/css/bootstrap.css">
+<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<link rel="stylesheet" href="/css/home.css">
+<head> <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!--<script src="/js/top.js"></script>-->
 </head>
-<body>
-<div class="container">
-    <div>
-        <h1>Hello Spring</h1>
-        <p>회원 기능</p>
-        <p>
-            <a href="/home">로그아웃</a>
-            <a href="/members">회원 목록</a>
-            <a href="/questions/new">질문 작성</a>
-            <a href="/questions/questionList">질문리스트</a>
-        </p>
-    </div>
+<style>
+    .nav-item .nav-link {
+        color: gray;
+    }
+    .container-fluid .navbar-brand{
+        color: gray;
+    }
 
+    .card {
+        display: flex;
+
+        justify-content: space-between;
+    }
+
+    .image img {
+        max-width: 100%;
+        max-height: 100%;
+    }
+</style>
+<body>
+<div class="top" style="background-color: #20c997">
+    <nav class="navbar navbar-expand-lg bg-light" style="background-color: #20c997">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">K.Knock</a>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/members/new">회원가입</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/members">회원목록</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="/questions/questionList">질문목록</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="/questions/new">질문 작성</a>
+                    </li>
+                </ul>
+                <form action="/search" name="search" class="d-flex" role="search" method="post">
+                    <input class="form-control me-2" type="text" placeholder="Search" name="search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+            </div>
+        </div>
+    </nav>
+</div>
+<div class="gap"></div>
+<form action="/logout" method="post">
+    <!--<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">-->
+    <button type="submit">로그아웃</button>
+</form>
+
+
+<div class="grid-container">
+    <div class="left">
+        <div class="dropdown">
+            <button class="dropbtn" type="button">
+                 <span
+                         class="dropbtn_icon">Tags</span>
+            </button>
+            <ul class="dropdown-content">
+                <li><a href="/questions/tagList?tags=C">C</a></li>
+                <li><a href="/questions/tagList?tags=Pawnable">Pawnable</a></li>
+                <li><a href="/questions/tagList?tags=Reversing">Reversing</a></li>
+                <li><a href="/questions/tagList?tags=Web">Web</a></li>
+                <li><a href="/questions/tagList?tags=Crypto">Crypto</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="center">
+        <div id="container_1">
+            <div class="card" style="background-color: rgba(63, 151, 155, 0.62);">
+                <img src="https://dreamhack.io/assets/img/rank_1.a680c13.svg"  style="width: 40px;height: 85px;" alt="1등">
+                <div class="words">
+                    <h3 style="color:#fff">실시간 채택왕</h3>
+                    <p style="font-size: large;
+        font-style:inherit; font-weight:bold;
+       "th:text="${answerKings.getName()}"></p>
+                    <p style="font-size: large;
+        font-style:inherit; font-weight:bold;
+       "th:text="${answerKings.getScore()}+'점'"></p>
+                </div>
+                <div class="image">
+                    <img th:src="'/image/'+${answerKings.getImage().get(0).getPostImageUrl()}" th:if="${answerKings.getImage().get(0).getPostImageUrl()!=null}" >
+                    <img src="https://avatars.githubusercontent.com/u/102720771?v=4" th:if="${answerKings.getImage().isEmpty()}">
+                </div>
+            </div>
+            <div class="card" style="background-color: rgba(63, 151, 100, 0.62);">
+                <img  src="https://dreamhack.io/assets/img/rank_1.a680c13.svg"  style="width: 40px;height: 85px;" alt="1등">
+                <div class="words">
+                    <h3 style="color:#fff">실시간 질문왕</h3>
+                    <p style="font-size: large;
+        font-style:inherit; font-weight:bold;
+       "th:text="${askKings.getName()}"></p>
+                    <p style="font-size: large;
+        font-style:inherit; font-weight:bold;
+       "th:text="${askKings.getAsk.size()}+'개'"></p>
+                </div>
+                <div class="image">
+                   <!-- <img th:src="'/image/'+${askKings.getImage().get(0).getPostImageUrl()}" th:if="${askKings.getImage().get(0).getPostImageUrl()!=null}" >-->
+                    <img src="https://avatars.githubusercontent.com/u/102720771?v=4">
+                </div>
+            </div>
+            <div class="card" style="background-color: rgba(50, 151, 100, 0.62);">
+                <img src="https://dreamhack.io/assets/img/rank_1.a680c13.svg"  style="width: 40px;height: 85px;" alt="1등">
+                <div class="words">
+                    <h3 style="color:#fff">실시간 보안왕</h3>
+
+                </div>
+            </div>
+            <div class="right"></div>
+        </div>
+
+
+    </div>
 </div>
 
-<div style="height: 50px;"></div>
-<form action="/search"     style="display:flex; width:50%; margin:auto; background-color: #00FF00; height: 50px; align-items: center; justify-content: center;"  method="post">
-    <input style="width:80%; height: 80%" type="text" name="search" placeholder="Search"/>
-    <button type="submit" style="width:20%; height: 80%">Go</button>
-</form>
+
+
 </body>
 </html>
